modified comment headers and text color in main_nav and bottom_nav

--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -11,6 +11,7 @@
           <p><strong>Email:</strong> jhuan180@my.Centennialcollege.ca</p>
           <p><strong>Address:</strong> 937 Progress Ave, Toronto, ON M1G 3T8</p>
         </div>
+    <!--form for user input and redirect to homepage after submittion-->
     <form action="/" onsubmit="postMessage()">
       <div class="contact-form">
         <h2>Send a message</h2>
