--- a/app/views/projects.ejs
+++ b/app/views/projects.ejs
@@ -9,7 +9,7 @@
             <img src="/img/icon-SQL.png" alt="icon-SQL" style="width:100px; height: auto; float: left;">
             <div class="project-content">
             <h2>Smartphone Store System</h2>
-            <p>Used Java and SQL to develop a software that consists of 5 components for managing customers, suppliers, orders, and sales analysis;<br>It enables users to interact with the database through UI; <br>collaborated with 2 group members and finished part of creating database and package including functions and procedures using PL/SQL</p>
+            <p>Used Java and SQL to develop a software that consists of 5 components for managing customers, suppliers, orders, and sales analysis; it enables users to interact with the database through UI; <br>collaborated with 2 group members and finished part of creating database and package including functions and procedures using PL/SQL</p>
             </div>
         </div>
         <div>
