--- a/app/views/partials/bottom_nav.ejs
+++ b/app/views/partials/bottom_nav.ejs
@@ -1,7 +1,7 @@
 <footer>
     <nav class="navbar fixed-bottom navbar-dark bg-info">
  
-  <h6 class="display-6 navbar-text text-light">&copy;2023 All rights reserved</h6>
+  <h6 class="display-6 navbar-text text-dark">&copy;2023 All rights reserved</h6>
   </div>
   </nav>
 </footer>
