--- a/app/views/partials/main_nav.ejs
+++ b/app/views/partials/main_nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-info">
+<nav class="navbar navbar-expand-lg navbar-light bg-info">
     <div class="container-fluid">
       <img src="/img/logo.jpg" alt="logo" style: width="100px"; height="100px">
       <a class="navbar-brand" href="#">Jingya (Grace) Huang</a>
