--- a/app/views/partials/main_nav.ejs
+++ b/app/views/partials/main_nav.ejs
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <div class="container-fluid">
       <img src="/img/logo.jpg" alt="logo" style: width="100px"; height="100px">
-      <a class="navbar-brand" href="#">Jingya (Grace) Huang</a>
+      <a class="navbar-brand" href="#"><b>Jingya (Grace) Huang</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-max ml-auto mb-2 mb-lg-0">
-          <b>
+         <b> 
           <% if (title=="Home"){%>
           <li class="nav-item active">
             <%}else{%>
@@ -15,7 +15,7 @@
                 <%}%>
             <a class="nav-link"  href="/"><i class="fas fa-lg fa-laptop-house"></i>Home</a>
           </li>
-           <% if (title=="About Me"){%>
+           <% if (title=="About"){%>
           <li class="nav-item active">
             <%}else{%>
               <li class="nav-item">
