--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,6 +7,7 @@
     <h1>Welcome to my <%= title %> Page</h1>
     <p>Hello! I'm Jingya (Grace) Huang. Thank you for visiting.</p>
     <p>My commitment is to combine my multilingual and technical skills to develop software solutions that bridge language barriers and make people's lives easier. </p>
+    <!--navigate to about me page-->
     <a href="/about" class="btn btn-info">Know more about me</a>
 </div>    
 </div>
